--- a/index.ipynb
+++ b/index.ipynb
@@ -33,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_employees = ['jim', 'tracy', 'lisa']"
@@ -57,11 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hi Jim, I'm so glad to be working with you!\",\n",
+       " \"Hi Tracy, I'm so glad to be working with you!\",\n",
+       " \"Hi Lisa, I'm so glad to be working with you!\"]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "welcome_messages = []\n",
     "for new_employee in new_employees:\n",
@@ -80,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_employees = ['steven', 'jan', 'meryl']"
@@ -97,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -108,17 +115,16 @@
        " \"Hi Meryl, I'm so glad to be working with you!\"]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "welcome_messages = []\n",
-    "for new_employee in new_employees:\n",
-    "    welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
-    "    \n",
-    "welcome_messages"
+    "message = []\n",
+    "for workers in new_employees:\n",
+    " message.append (\"Hi \" + workers.title() + \", I'm so glad to be working with you!\")\n",
+    "message"
    ]
   },
   {
@@ -132,28 +138,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def greet_employees():\n",
-    "    welcome_messages = []\n",
+    "def greet_employees(): # function signature\n",
+    "    welcome_messages = [] # begin function body\n",
     "    for new_employee in new_employees:\n",
     "        welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
-    "    return welcome_messages"
+    "    return welcome_messages # return statement\n",
+    "\n",
+    "# no longer in function body"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hi Steven, I'm so glad to be working with you!\",\n",
+       " \"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Meryl, I'm so glad to be working with you!\"]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greet_employees()"
    ]
@@ -174,11 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Joe, I'm so glad to be working with you!\",\n",
+       " \"Hi Avi, I'm so glad to be working with you!\"]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_employees = ['Jan', 'Joe', 'Avi']\n",
     "greet_employees()"
@@ -193,11 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Joe, I'm so glad to be working with you!\",\n",
+       " \"Hi Avi, I'm so glad to be working with you!\"]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greet_employees()"
    ]
@@ -218,10 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def name_of_function(): # signature\n",
@@ -247,10 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def name_of_function(): \n",
@@ -267,10 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name_of_function()"
@@ -292,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -300,9 +334,9 @@
      "evalue": "name 'words' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-40-993ed7d20d5f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-67-730c51b3e7e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'words' is not defined"
      ]
     }
@@ -320,10 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 68,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def other_function(): # signature\n",
@@ -333,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +374,7 @@
        "'returned from inside the function body'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
